contact and about page updated

--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -16,11 +16,23 @@
 					</h3>
 
 					<p class="stext-113 cl6 p-b-26">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat consequat enim, non auctor massa ultrices non. Morbi sed odio massa. Quisque at vehicula tellus, sed tincidunt augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas varius egestas diam, eu sodales metus scelerisque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas gravida justo eu arcu egestas convallis. Nullam eu erat bibendum, tempus ipsum eget, dictum enim. Donec non neque ut enim dapibus tincidunt vitae nec augue. Suspendisse potenti. Proin ut est diam. Donec condimentum euismod tortor, eget facilisis diam faucibus et. Morbi a tempor elit.
+						At Sk8 Factory, we're passionate about all things skating. Whether you're a beginner or a seasoned pro, we've got you covered with a wide range of skates and accessories to fulfill your skating needs. Our mission is to provide high-quality products that enhance your skating experience and keep you rolling in style.
 					</p>
 
 					<p class="stext-113 cl6 p-b-26">
-						Donec gravida lorem elit, quis condimentum ex semper sit amet. Fusce eget ligula magna. Aliquam aliquam imperdiet sodales. Ut fringilla turpis in vehicula vehicula. Pellentesque congue ac orci ut gravida. Aliquam erat volutpat. Donec iaculis lectus a arcu facilisis, eu sodales lectus sagittis. Etiam pellentesque, magna vel dictum rutrum, neque justo eleifend elit, vel tincidunt erat arcu ut sem. Sed rutrum, turpis ut commodo efficitur, quam velit convallis ipsum, et maximus enim ligula ac ligula. 
+						Why Choose Sk8 Factory?
+						<br><br><br>
+						<strong>Extensive Selection:</strong> We pride ourselves on offering a diverse range of skates to suit every preference and skill level. From classic quad skates to sleek inline skates, we have something for everyone. Explore our collection and find the perfect pair to match your unique style.
+						<br><br>
+						<strong>Quality Assurance:</strong>		 We understand the importance of durability and performance when it comes to skates. That's why we handpick our inventory from reputable brands known for their exceptional craftsmanship. Rest assured, each pair of skates we carry is built to withstand the rigors of your skating adventures.
+						<br><br>
+						<strong>Expert Advice: </strong>		Our team consists of passionate skaters who possess in-depth knowledge about the sport. We're here to help you make an informed decision. Whether you're unsure about sizing, need recommendations for specific skating styles, or have any questions, our friendly staff is ready to assist you.
+						<br><br>
+						<strong>Accessories and Gear:</strong>		 Skating isn't just about the skates; it's about the whole experience. We offer a wide range of accessories and gear to complement your skating journey. From protective equipment like helmets, knee pads, and wrist guards to stylish apparel and skate tools, we have everything you need to skate with confidence and flair.
+						<br><br>
+						<strong>Community Engagement:</strong>		 Skating is a vibrant community, and we're thrilled to be a part of it. We regularly organize events, workshops, and skate sessions to bring skaters together, fostering a sense of camaraderie and providing opportunities to learn, grow, and share the joy of skating.
+						<br><br>
+						Visit our store today and let Sk8 Factory be your go-to destination for all things skating. We're dedicated to providing exceptional products and services that empower you to embrace the world on wheels.					
 					</p>
 
 					<p class="stext-113 cl6 p-b-26">
@@ -32,7 +44,7 @@
 			<div class="col-11 col-md-5 col-lg-4 m-lr-auto">
 				<div class="how-bor1 ">
 					<div class="hov-img0">
-						<img src="{% static 'store/images/about-01.jpg' %}" alt="IMG">
+						<img src="{% static 'store/images/sbpic1.jpg' %}" alt="IMG">
 					</div>
 				</div>
 			</div>
@@ -46,17 +58,15 @@
 					</h3>
 
 					<p class="stext-113 cl6 p-b-26">
-						Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida. Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.
+						At Sk8 Factory, our mission is to bring the joy of skating to individuals around the globe through our online skate shop. We are passionate about providing a seamless and exciting shopping experience, ensuring that skaters of all ages and skill levels can easily access high-quality skates and gear to fuel their passion for the sport. With our commitment to excellence, inclusivity, and customer satisfaction, we strive to be the go-to destination for skaters seeking their perfect pair of wheels.
 					</p>
 
 					<div class="bor16 p-l-29 p-b-9 m-t-22">
 						<p class="stext-114 cl6 p-r-40 p-b-11">
-							Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn't really do it, they just saw something. It seemed obvious to them after a while.
+							"Skating is not a sport. It's a lifestyle." 
 						</p>
 
-						<span class="stext-111 cl8">
-							- Steve Job’s 
-						</span>
+				
 					</div>
 				</div>
 			</div>
@@ -64,7 +74,7 @@
 			<div class="order-md-1 col-11 col-md-5 col-lg-4 m-lr-auto p-b-30">
 				<div class="how-bor2">
 					<div class="hov-img0">
-						<img src="{% static 'store/images/about-02.jpg' %}" alt="IMG">
+						<img src="{% static 'store/images/aboutimg.jpg' %}" alt="IMG">
 					</div>
 				</div>
 			</div>
