--- a/store/templates/store/guestcontact.html
+++ b/store/templates/store/guestcontact.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...your-unique-integrity-hash..." crossorigin="anonymous" />
 
 <section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('images/bg-01.jpg');">
     <h2 class="ltext-105 cl0 txt-center">
@@ -14,26 +15,7 @@
 <section class="bg0 p-t-104 p-b-116">
     <div class="container">
         <div class="flex-w flex-tr">
-            <div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
-                <form>
-                    <h4 class="mtext-105 cl2 txt-center p-b-30">
-                        Send Us A Message
-                    </h4>
 
-                    <div class="bor8 m-b-20 how-pos4-parent">
-                        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="text" name="email" placeholder="Your Email Address">
-                        <img class="how-pos4 pointer-none" src="images/icons/icon-email.png" alt="ICON">
-                    </div>
-
-                    <div class="bor8 m-b-30">
-                        <textarea class="stext-111 cl2 plh3 size-120 p-lr-28 p-tb-25" name="msg" placeholder="How Can We Help?"></textarea>
-                    </div>
-
-                    <button class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
-                        Submit
-                    </button>
-                </form>
-            </div>
 
             <div class="size-210 bor10 flex-w flex-col-m p-lr-93 p-tb-30 p-lr-15-lg w-full-md">
                 <div class="flex-w w-full p-b-42">
@@ -47,7 +29,8 @@
                         </span>
 
                         <p class="stext-115 cl6 size-213 p-t-18">
-                            Coza Store Center 8th floor, 379 Hudson St, New York, NY 10018 US
+                            SK8 FACTORY, 8th floor,<br> Valyaveettil Buildings,<br>
+                            Thodupuzha, Idukki <br>Kerala, India
                         </p>
                     </div>
                 </div>
@@ -63,7 +46,7 @@
                         </span>
 
                         <p class="stext-115 cl1 size-213 p-t-18">
-                            +1 800 1236879
+                            +91 7907829667
                         </p>
                     </div>
                 </div>
@@ -79,13 +62,52 @@
                         </span>
 
                         <p class="stext-115 cl1 size-213 p-t-18">
-                            contact@example.com
+                            sk8factory@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+           
+            
+
+            <div class="size-210 bor10 flex-w flex-col-m p-lr-93 p-tb-30 p-lr-15-lg w-full-md">
+                <div class="flex-w w-full p-b-42">
+                    <span class="fs-18 cl5 txt-center size-211">
+                        <i class="fas fa-user-tie"></i>
+                    </span>
+
+                    <div class="size-212 p-t-2 ">
+                        <span class="mtext-110 cl2">
+                            Managing Director
+                        </span>
+
+                        <p class="stext-115 cl6 size-213 p-t-18 ">
+                            <img style="max-width: 70%;  " class="img-fluid rounded" src="{% static 'store/images/soorajbaiju.jpg' %}" alt="">
+                            <br><br><div>Sooraj Baiju</div>
+                            <div>Founder & Managing Director, <strong>SK8 FACTORY</strong></div>
+                    </div>
+                </div>
+
+         
+                <div class="flex-w w-full">
+                    <span class="fs-18 cl5 txt-center size-211">
+                        <span class="lnr lnr-envelope"></span>
+                    </span>
+
+                    <div class="size-212 p-t-2">
+                        <span class="mtext-110 cl2">
+                            Contact
+                        </span>
+
+                        <p class="stext-115 cl1 size-213 p-t-18">
+                            md_sk8factory@gmail.com
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 </section>	
 
 
