--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -7,7 +7,7 @@
 <div class="row mt-5"></div>
 <div class="row mt-5"></div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
