--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -812,8 +812,11 @@
 						<div class="block2">
 							<div style="width:250px;height:400px;" class="block2-pic hov-img0">
 								
-								
-									  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
+										<a href={% url 'guestpreview' item.id %}>
+											<img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
+
+										</a>
+									  
 								
 	
 								{% comment %} <a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
@@ -825,7 +828,7 @@
 	
 							<div class="block2-txt flex-w flex-t p-t-14">
 								<div class="block2-txt-child1 flex-col-l ">
-									<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+									<a class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 										{{item.name}}
 									</a>
 	
@@ -836,10 +839,10 @@
 									{% comment %} <a href={% url 'buynow' item.id %}>
 										Buy it
 									</a> {% endcomment %}
-									<div style="margin-left:200px;">
+									{% comment %} <div style="margin-left:200px;">
 										<a href={% url 'guestpreview' item.id %}> <button class="btn btn-info">Preview</button> </a>
 
-									</div>
+									</div> {% endcomment %}
 									
 									{% comment %} <a href={% url 'addtocart' item.id %}> Add to Cart</a> {% endcomment %}
 									{% comment %} <button type="button" class="addit" data-toggle="modal" data-target="#myModal" data-category-id="{{ item.id }}">Add to Cart</button> {% endcomment %}
@@ -897,7 +900,8 @@
 									<img class=" icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'store/images/icons/icon-heart-02.png' %}" alt=""  >
 								</a> {% endcomment %}
 							</div>
-							<div id="wishlistmsg{{item.id}}" class="row">
+							<div  class="row">
+								<i id="wishlistmsg{{item.id}}">	</i>
 
 							</div>
 							</div>
@@ -1370,7 +1374,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	
 					}
 					else if(response.added){
-						$("#wishlistmsg"+productid).html(response.added).addClass("text-success");
+						$("#wishlistmsg"+productid).html(response.added + " &#x2713;").addClass("text-success");
 	
 					}
 					
