Product Search Implemented

--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -810,7 +810,7 @@
 					<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 						<!-- Block2 -->
 						<div class="block2">
-							<div style="width:250px;height:400px;" class="block2-pic hov-img0">
+							<div style="width:250px;height:320px;" class="block2-pic hov-img0">
 								
 										<a href={% url 'guestpreview' item.id %}>
 											<img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
@@ -827,7 +827,7 @@
 							</div>
 	
 							<div class="block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
+								<div class="block2-txt-child1 flex-col-l pl-3">
 									<a class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 										{{item.name}}
 									</a>
