--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -425,6 +425,8 @@
 	<section class="section-slide">
 		<div class="wrap-slick1">
 			<div class="slick1">
+				
+
 				<div class="item-slick1" style=		"background-image: url({% static 'store/images/sbyellow.jpg'  %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
@@ -448,8 +450,13 @@
 						</div>
 					</div>
 				</div>
+				
+				
+				
+				
+				
 
-				<div class="item-slick1" style="background-image: url({% static 'store/images/quadskate1.webp' %});">
+				<div class="item-slick1" style="background-image: url({% static 'store/images/skatergirl.jpg' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
@@ -473,7 +480,7 @@
 					</div>
 				</div>
 
-				<div class="item-slick1" style="background-image: url({% static 'store/images/sbpic1.jpg' %});">
+				<div class="item-slick1" style="background-image: url({% static 'store/images/Skateboardblue.jpg' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
@@ -873,7 +880,7 @@
 					<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 						<!-- Block2 -->
 						<div class="block2">
-							<div style="width:250px;height:400px;" class="block2-pic hov-img0">
+							<div style="width:250px;height:320px;" class="block2-pic hov-img0">
 								
 								
 								<a href={% url 'preview' item.id %}>
@@ -891,7 +898,7 @@
 							</div>
 	
 							<div class="block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
+								<div class="block2-txt-child1 flex-col-l pl-3 ">
 									<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 										{{item.name}}
 									</a>
