--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -32,8 +32,14 @@
 						<button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
 							<i class="zmdi zmdi-search"></i>
 						</button>
+						<form action="" method="POST">{% csrf_token %}
+						
+							<input class="mtext-107 cl2 size-114 plh2 p-r-15 " type="text" name="search-product" placeholder="Search">
+							<button class="mt-4 ml-0 mb-3 flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04" type="submit"> Search</button>
 
-						<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
+
+						</form>
+						
 					</div>	
 				</div>
 
@@ -91,7 +97,7 @@
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					<!-- Block2 -->
 					<div  class="block2">
-						<div style="width:250px;height:400px;" class="block2-pic hov-img0 ">
+						<div style="width:250px;height:320px;" class="block2-pic hov-img0 ">
 							
 								<a href={% url 'preview' item.id %}>
 									<img  src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
@@ -109,7 +115,7 @@
 						</div>
 
 						<div class="block2-txt flex-w flex-t p-t-14">
-							<div class="block2-txt-child1 flex-col-l ">
+							<div class="block2-txt-child1 flex-col-l pl-3 ">
 								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 									{{item.name}}
 								</a>
