checkout payment buttons done

--- a/store/templates/store/userdashboard/checkout.html
+++ b/store/templates/store/userdashboard/checkout.html
@@ -156,8 +156,8 @@
 	
 				</div>
 				<div class="col-md-8">
-					<span class="font-weight-bold display-4" style="color:#717fe0;" > Rs.</span>
-					<span style="color:#717fe0;" id="totalamount" class="font-weight-bold display-4">{{totalsum}}</span>
+					<span class="font-weight-bold " style="color:#717fe0; font-size:40px;" > Rs.</span>
+					<span style="color:#717fe0; font-size:40px;" id="totalamount" class="font-weight-bold ">{{totalsum}}</span>
 					<span class="font-weight-bold display-4" style="color:#717fe0;" > /-</span>
 	
 				</div>
@@ -189,7 +189,7 @@
 				
 			</div>
 			<div class="row justify-content-end">
-				<button  id="applycoupon" name="couponform" class=" btn btn-dark" id="apply_coupon">Apply Coupon</button> 
+				<button  id="applycoupon" name="couponform" class="flex-c-m stext-101 cl0 size-100 btn bg1 bor1 hov-btn2 p-lr-15 trans-04 mr-3" id="apply_coupon">Apply Coupon</button> 
 
 
 			</div>
@@ -225,28 +225,42 @@
 	
 				</div>
 
-				<div>
-					{% if messages %}
-						{% for message in messages %}
-							<div class="alert alert-danger" role="alert">
-								{{ message }}
-							</div>
-						{% endfor %}
-					{% endif %}
-				</div>
+			
 
 			</div>
 			<hr>
 			<div class="row mt-5">
 				<div class="col-md-6">
-					<button type="submit" name="cashondelivery" class="btn btn-primary">Cash On Delivery</button>
+					<span class="block1-name ltext-100 trans-04 p-b-8 font-weight-bold">
+						Confirm Payment
+					</span>
+					
+				</div>
+				<div class="col-md-6">
+					<div class="row">
+						<i class="fas fa-money-bill-wave mr-2 mt-3"></i>
+					<button type="submit" name="cashondelivery" class="flex-c-m stext-101 cl0 size-103 bg-info bor1 hov-btn2 p-lr-15 trans-04">Cash On Delivery</button>
+
+					</div>
+					<div class="row mt-3">
+						<i class="fas fa-hand-holding-usd mr-2 mt-3"></i>
+						<button type="submit" name="action" value="razorpay"  class="flex-c-m stext-101 cl0 size-103 bg-success bor1 hov-btn2 p-lr-15 trans-04" id="rzp-button1">Pay with Razorpay</button>
+
+					</div>
+					<div class="row mt-3">
+						<i class="fas fa-wallet mr-2 mt-3"></i>
+						<button type="submit" name="walletpayment" class="flex-c-m stext-101 cl0 size-103 bg-warning bor1 hov-btn2 p-lr-15 trans-04">Pay Using Wallet</button>
+
+					</div>
+					
+					
+
+					
 
 				</div>
 				
 				{% comment %} <button type="submit" name="action" value="razorpay"  class="btn btn-success" id="rzp-button1">Pay with Razorpay</button> {% endcomment %}
-				<div class="col-md-6">
-					<button type="submit" name="action" value="razorpay"  class="btn btn-success" id="rzp-button1">Pay with Razorpay</button>
-				</div>
+			
 	
 			</div>
 			
@@ -286,6 +300,15 @@
 
 
 		</div>
+		<div class="mt-4">
+			{% if messages %}
+				{% for message in messages %}
+					<div class="pl-5 alert alert-danger" role="alert">
+						{{ message }}
+					</div>
+				{% endfor %}
+			{% endif %}
+		</div>
 	
 		
 
@@ -316,7 +339,7 @@
 				$("#totalamount").html(discounted_amount);
 
 				if (response.message_success){
-					$("#couponmessage").html(response.message_success).addClass("text-success");
+					$("#couponmessage").html(response.message_success +" &#x2713;").addClass("text-success");
 
 				}
 				else if(response.message){
